--- a/book/makepad/makepad.html
+++ b/book/makepad/makepad.html
@@ -88,7 +88,7 @@
 
         <nav id="sidebar" class="sidebar" aria-label="Table of contents">
             <div class="sidebar-scrollbox">
-                <ol class="chapter"><li class="chapter-item expanded affix "><a href="../../index.html">Introduction</a></li><li class="chapter-item expanded "><a href="../gen/quickstart.html"><strong aria-hidden="true">1.</strong> QuickStart</a></li><li class="chapter-item expanded "><a href="../makepad/makepad.html" class="active"><strong aria-hidden="true">2.</strong> Makepad</a></li><li><ol class="section"><li class="chapter-item expanded "><a href="../makepad/quickstart.html"><strong aria-hidden="true">2.1.</strong> QuickStart</a></li><li class="chapter-item expanded "><a href="../makepad/built-in/struct.html"><strong aria-hidden="true">2.2.</strong> Built-In</a></li><li class="chapter-item expanded "><a href="../makepad/syntax/syntax.html"><strong aria-hidden="true">2.3.</strong> Syntax</a></li><li><ol class="section"><li class="chapter-item expanded "><a href="../makepad/syntax/global.html"><strong aria-hidden="true">2.3.1.</strong> Global</a></li><li class="chapter-item expanded "><a href="../makepad/syntax/import.html"><strong aria-hidden="true">2.3.2.</strong> Import</a></li></ol></li></ol></li><li class="chapter-item expanded "><a href="../gen/design/gen-ui-design.html"><strong aria-hidden="true">3.</strong> GenUI-Design</a></li><li><ol class="section"><li class="chapter-item expanded "><a href="../gen/design/parser/parser.html"><strong aria-hidden="true">3.1.</strong> Parser</a></li><li><ol class="section"><li class="chapter-item expanded "><a href="../gen/design/parser/result.html"><strong aria-hidden="true">3.1.1.</strong> Result</a></li><li class="chapter-item expanded "><a href="../gen/design/parser/all.html"><strong aria-hidden="true">3.1.2.</strong> All</a></li></ol></li><li class="chapter-item expanded "><a href="../gen/design/converter/converter.html"><strong aria-hidden="true">3.2.</strong> Converter</a></li><li class="chapter-item expanded "><a href="../gen/design/issues/issues.html"><strong aria-hidden="true">3.3.</strong> issues</a></li><li class="chapter-item expanded "><a href="../gen/design/future.html"><strong aria-hidden="true">3.4.</strong> future</a></li></ol></li></ol>
+                <ol class="chapter"><li class="chapter-item expanded affix "><a href="../../index.html">Introduction</a></li><li class="chapter-item expanded "><a href="../gen/quickstart.html"><strong aria-hidden="true">1.</strong> QuickStart</a></li><li class="chapter-item expanded "><a href="../makepad/makepad.html" class="active"><strong aria-hidden="true">2.</strong> Makepad</a></li><li><ol class="section"><li class="chapter-item expanded "><a href="../makepad/quickstart.html"><strong aria-hidden="true">2.1.</strong> QuickStart</a></li><li class="chapter-item expanded "><a href="../makepad/built-in/struct.html"><strong aria-hidden="true">2.2.</strong> Built-In</a></li><li class="chapter-item expanded "><a href="../makepad/syntax/syntax.html"><strong aria-hidden="true">2.3.</strong> Syntax</a></li><li><ol class="section"><li class="chapter-item expanded "><a href="../makepad/syntax/global.html"><strong aria-hidden="true">2.3.1.</strong> Global</a></li><li class="chapter-item expanded "><a href="../makepad/syntax/import.html"><strong aria-hidden="true">2.3.2.</strong> Import</a></li><li class="chapter-item expanded "><a href="../makepad/syntax/macro/macro.html"><strong aria-hidden="true">2.3.3.</strong> Macro</a></li><li><ol class="section"><li class="chapter-item expanded "><div><strong aria-hidden="true">2.3.3.1.</strong> </div></li></ol></li><li class="chapter-item expanded "><a href="../makepad/syntax/redraw.html"><strong aria-hidden="true">2.3.4.</strong> Redraw</a></li><li class="chapter-item expanded "><a href="../makepad/event/event.html"><strong aria-hidden="true">2.3.5.</strong> Event</a></li><li><ol class="section"><li class="chapter-item expanded "><a href="../makepad/event/match_event.html"><strong aria-hidden="true">2.3.5.1.</strong> MatchEvent</a></li></ol></li></ol></li></ol></li><li class="chapter-item expanded "><a href="../gen/design/gen-ui-design.html"><strong aria-hidden="true">3.</strong> GenUI-Design</a></li><li><ol class="section"><li class="chapter-item expanded "><a href="../gen/design/parser/parser.html"><strong aria-hidden="true">3.1.</strong> Parser</a></li><li><ol class="section"><li class="chapter-item expanded "><a href="../gen/design/parser/result.html"><strong aria-hidden="true">3.1.1.</strong> Result</a></li><li class="chapter-item expanded "><a href="../gen/design/parser/all.html"><strong aria-hidden="true">3.1.2.</strong> All</a></li></ol></li><li class="chapter-item expanded "><a href="../gen/design/converter/converter.html"><strong aria-hidden="true">3.2.</strong> Converter</a></li><li class="chapter-item expanded "><a href="../gen/design/issues/issues.html"><strong aria-hidden="true">3.3.</strong> issues</a></li><li class="chapter-item expanded "><a href="../gen/design/future.html"><strong aria-hidden="true">3.4.</strong> future</a></li></ol></li></ol>
             </div>
             <div id="sidebar-resize-handle" class="sidebar-resize-handle">
                 <div class="sidebar-resize-indicator"></div>
@@ -174,6 +174,29 @@
                 <div id="content" class="content">
                     <main>
                         <h1 id="makepad"><a class="header" href="#makepad">Makepad</a></h1>
+<p>Makepad 是一个采用Rust编程语言开发的跨平台文本编辑器和开发环境。它特别强调在性能和可扩展性方面的优势，旨在为开发者提供一个高效、响应迅速的编码体验。Makepad 使用了自己的渲染引擎，该引擎也是用Rust编写的，这使得它在渲染大型项目时能够保持流畅的性能。</p>
+<p>Makepad的一些特色包括：</p>
+<ol>
+<li>
+<p><strong>跨平台支持</strong>：Makepad能够在多个操作系统上运行，包括Windows、macOS和Linux，这得益于Rust及其跨平台兼容性。</p>
+</li>
+<li>
+<p><strong>自定义渲染引擎</strong>：Makepad使用自己开发的渲染引擎，这意味着它可以优化渲染性能，同时还可以支持复杂的视觉效果和动画。</p>
+</li>
+<li>
+<p><strong>使用Rust语言开发</strong>：Rust的安全性和性能使Makepad能够高效地处理大型文件和复杂的项目，同时保持低内存使用和快速响应。</p>
+</li>
+<li>
+<p><strong>代码编辑和项目管理</strong>：Makepad不仅是一个文本编辑器，它还提供了项目管理工具，帮助开发者组织和管理他们的代码库。</p>
+</li>
+<li>
+<p><strong>可扩展性</strong>：Makepad旨在支持插件和扩展，这使得开发者可以根据自己的需求定制编辑器的功能。</p>
+</li>
+<li>
+<p><strong>面向未来的设计</strong>：Makepad的开发团队致力于探索新的编程范式和工具，例如利用WebGPU等现代技术来推动前端和图形编程的界限。</p>
+</li>
+</ol>
+<p>Makepad是一个相对较新的项目，仍在积极开发中，这意味着它会不断引入新功能并改进现有功能。对于寻求现代、高性能且可定制开发工具的Rust开发者和其他程序员来说，Makepad可能是一个有趣的选择。</p>
 
                     </main>
 
