--- a/a.html
+++ b/a.html
@@ -21,6 +21,7 @@
               letter-spacing: 4px;
               background: linear-gradient(90deg, #ed5103, #ff8142);
               background-clip: text;
+              -webkit-background-clip: text;
             "
           >
             Rust
