--- a/book/makepad/event/event.html
+++ b/book/makepad/event/event.html
@@ -3,7 +3,7 @@
     <head>
         <!-- Book generated using mdBook -->
         <meta charset="UTF-8">
-        <title>future - Gen-UI Book</title>
+        <title>Event - Gen-UI Book</title>
 
 
         <!-- Custom HTML head -->
@@ -88,7 +88,7 @@
 
         <nav id="sidebar" class="sidebar" aria-label="Table of contents">
             <div class="sidebar-scrollbox">
-                <ol class="chapter"><li class="chapter-item expanded affix "><a href="../../../index.html">Introduction</a></li><li class="chapter-item expanded "><a href="../../gen/quickstart.html"><strong aria-hidden="true">1.</strong> QuickStart</a></li><li class="chapter-item expanded "><a href="../../makepad/makepad.html"><strong aria-hidden="true">2.</strong> Makepad</a></li><li><ol class="section"><li class="chapter-item expanded "><a href="../../makepad/quickstart.html"><strong aria-hidden="true">2.1.</strong> QuickStart</a></li><li class="chapter-item expanded "><a href="../../makepad/built-in/struct.html"><strong aria-hidden="true">2.2.</strong> Built-In</a></li><li class="chapter-item expanded "><a href="../../makepad/syntax/syntax.html"><strong aria-hidden="true">2.3.</strong> Syntax</a></li><li><ol class="section"><li class="chapter-item expanded "><a href="../../makepad/syntax/global.html"><strong aria-hidden="true">2.3.1.</strong> Global</a></li><li class="chapter-item expanded "><a href="../../makepad/syntax/import.html"><strong aria-hidden="true">2.3.2.</strong> Import</a></li><li class="chapter-item expanded "><a href="../../makepad/syntax/macro/macro.html"><strong aria-hidden="true">2.3.3.</strong> Macro</a></li><li><ol class="section"><li class="chapter-item expanded "><div><strong aria-hidden="true">2.3.3.1.</strong> </div></li></ol></li><li class="chapter-item expanded "><a href="../../makepad/syntax/redraw.html"><strong aria-hidden="true">2.3.4.</strong> Redraw</a></li><li class="chapter-item expanded "><a href="../../makepad/event/event.html"><strong aria-hidden="true">2.3.5.</strong> Event</a></li><li><ol class="section"><li class="chapter-item expanded "><a href="../../makepad/event/match_event.html"><strong aria-hidden="true">2.3.5.1.</strong> MatchEvent</a></li></ol></li></ol></li></ol></li><li class="chapter-item expanded "><a href="../../gen/design/gen-ui-design.html"><strong aria-hidden="true">3.</strong> GenUI-Design</a></li><li><ol class="section"><li class="chapter-item expanded "><a href="../../gen/design/parser/parser.html"><strong aria-hidden="true">3.1.</strong> Parser</a></li><li><ol class="section"><li class="chapter-item expanded "><a href="../../gen/design/parser/result.html"><strong aria-hidden="true">3.1.1.</strong> Result</a></li><li class="chapter-item expanded "><a href="../../gen/design/parser/all.html"><strong aria-hidden="true">3.1.2.</strong> All</a></li></ol></li><li class="chapter-item expanded "><a href="../../gen/design/converter/converter.html"><strong aria-hidden="true">3.2.</strong> Converter</a></li><li class="chapter-item expanded "><a href="../../gen/design/issues/issues.html"><strong aria-hidden="true">3.3.</strong> issues</a></li><li class="chapter-item expanded "><a href="../../gen/design/future.html" class="active"><strong aria-hidden="true">3.4.</strong> future</a></li></ol></li></ol>
+                <ol class="chapter"><li class="chapter-item expanded affix "><a href="../../../index.html">Introduction</a></li><li class="chapter-item expanded "><a href="../../gen/quickstart.html"><strong aria-hidden="true">1.</strong> QuickStart</a></li><li class="chapter-item expanded "><a href="../../makepad/makepad.html"><strong aria-hidden="true">2.</strong> Makepad</a></li><li><ol class="section"><li class="chapter-item expanded "><a href="../../makepad/quickstart.html"><strong aria-hidden="true">2.1.</strong> QuickStart</a></li><li class="chapter-item expanded "><a href="../../makepad/built-in/struct.html"><strong aria-hidden="true">2.2.</strong> Built-In</a></li><li class="chapter-item expanded "><a href="../../makepad/syntax/syntax.html"><strong aria-hidden="true">2.3.</strong> Syntax</a></li><li><ol class="section"><li class="chapter-item expanded "><a href="../../makepad/syntax/global.html"><strong aria-hidden="true">2.3.1.</strong> Global</a></li><li class="chapter-item expanded "><a href="../../makepad/syntax/import.html"><strong aria-hidden="true">2.3.2.</strong> Import</a></li><li class="chapter-item expanded "><a href="../../makepad/syntax/macro/macro.html"><strong aria-hidden="true">2.3.3.</strong> Macro</a></li><li><ol class="section"><li class="chapter-item expanded "><div><strong aria-hidden="true">2.3.3.1.</strong> </div></li></ol></li><li class="chapter-item expanded "><a href="../../makepad/syntax/redraw.html"><strong aria-hidden="true">2.3.4.</strong> Redraw</a></li><li class="chapter-item expanded "><a href="../../makepad/event/event.html" class="active"><strong aria-hidden="true">2.3.5.</strong> Event</a></li><li><ol class="section"><li class="chapter-item expanded "><a href="../../makepad/event/match_event.html"><strong aria-hidden="true">2.3.5.1.</strong> MatchEvent</a></li></ol></li></ol></li></ol></li><li class="chapter-item expanded "><a href="../../gen/design/gen-ui-design.html"><strong aria-hidden="true">3.</strong> GenUI-Design</a></li><li><ol class="section"><li class="chapter-item expanded "><a href="../../gen/design/parser/parser.html"><strong aria-hidden="true">3.1.</strong> Parser</a></li><li><ol class="section"><li class="chapter-item expanded "><a href="../../gen/design/parser/result.html"><strong aria-hidden="true">3.1.1.</strong> Result</a></li><li class="chapter-item expanded "><a href="../../gen/design/parser/all.html"><strong aria-hidden="true">3.1.2.</strong> All</a></li></ol></li><li class="chapter-item expanded "><a href="../../gen/design/converter/converter.html"><strong aria-hidden="true">3.2.</strong> Converter</a></li><li class="chapter-item expanded "><a href="../../gen/design/issues/issues.html"><strong aria-hidden="true">3.3.</strong> issues</a></li><li class="chapter-item expanded "><a href="../../gen/design/future.html"><strong aria-hidden="true">3.4.</strong> future</a></li></ol></li></ol>
             </div>
             <div id="sidebar-resize-handle" class="sidebar-resize-handle">
                 <div class="sidebar-resize-indicator"></div>
@@ -173,26 +173,18 @@
 
                 <div id="content" class="content">
                     <main>
-                        <h1 id="incremental-compilation"><a class="header" href="#incremental-compilation">Incremental compilation</a></h1>
-<p>通过将代码分成模板、脚本、和样式三个部分，已经为实现增量编译奠定了基础。增量编译的关键在于能够快速识别出自上次编译以来哪些部分发生了变化，并仅重新编译这些变化的部分，从而节省时间和资源。将代码预处理成几个独立的部分，并使用策略模式来处理这些部分，为增量编译提供了一个很好的起点。以下是一些可以考虑的方向来进一步实现和优化增量编译的功能：</p>
-<h2 id="1-变更检测机制"><a class="header" href="#1-变更检测机制">1. 变更检测机制</a></h2>
-<p>为了实现增量编译，你需要一种机制来比较当前代码与上一次编译版本之间的差异。这涉及到对每个部分（模板、脚本、样式）进行某种形式的哈希或签名，以便快速识别出哪些部分发生了变化。Git这样的版本控制系统就是利用哈希来追踪文件变化的一个例子。</p>
-<h2 id="2-独立部分的编译与缓存"><a class="header" href="#2-独立部分的编译与缓存">2. 独立部分的编译与缓存</a></h2>
-<p>在检测到特定部分（模板、脚本、样式）发生变化后，你的框架应该能够仅重新编译这些变化的部分，而不是整个应用。此外，对于没有变化的部分，如果能够缓存它们的编译结果，就可以在下一次编译时直接复用，进一步提高编译效率。</p>
-<h2 id="3-策略模式的应用"><a class="header" href="#3-策略模式的应用">3. 策略模式的应用</a></h2>
-<p>使用了策略模式进行处理，这是一个很好的选择，因为它允许你为不同类型的变化定义不同的处理策略。例如，对于模板部分的变化，可能涉及到DOM结构的更新；而脚本部分的变化可能涉及到逻辑处理的更新；样式部分的变化则涉及到视觉表现的更新。通过为这些不同的变化类型定义具体的策略，你的框架可以更加灵活地处理各种变化情况。</p>
-<h2 id="4-优化构建过程"><a class="header" href="#4-优化构建过程">4. 优化构建过程</a></h2>
-<p>除了增量编译之外，还可以探索其他优化构建过程的方法。比如，是否可以并行处理某些任务？是否可以更智能地安排任务的执行顺序以减少依赖等待时间？这些都是值得考虑的优化方向。</p>
-<p>总的来说，已经为实现增量编译设定了一个很好的基础。接下来的关键在于如何有效地实现变更检测机制，以及如何优化独立部分的编译与缓存策略。通过不断迭代和优化，你的框架将能够提供更加高效和响应快速的开发体验。</p>
-
+                        
                     </main>
 
                     <nav class="nav-wrapper" aria-label="Page navigation">
                         <!-- Mobile navigation buttons -->
-                            <a rel="prev" href="../../gen/design/issues/issues.html" class="mobile-nav-chapters previous" title="Previous chapter" aria-label="Previous chapter" aria-keyshortcuts="Left">
+                            <a rel="prev" href="../../makepad/syntax/redraw.html" class="mobile-nav-chapters previous" title="Previous chapter" aria-label="Previous chapter" aria-keyshortcuts="Left">
                                 <i class="fa fa-angle-left"></i>
                             </a>
 
+                            <a rel="next prefetch" href="../../makepad/event/match_event.html" class="mobile-nav-chapters next" title="Next chapter" aria-label="Next chapter" aria-keyshortcuts="Right">
+                                <i class="fa fa-angle-right"></i>
+                            </a>
 
                         <div style="clear: both"></div>
                     </nav>
@@ -200,10 +192,13 @@
             </div>
 
             <nav class="nav-wide-wrapper" aria-label="Page navigation">
-                    <a rel="prev" href="../../gen/design/issues/issues.html" class="nav-chapters previous" title="Previous chapter" aria-label="Previous chapter" aria-keyshortcuts="Left">
+                    <a rel="prev" href="../../makepad/syntax/redraw.html" class="nav-chapters previous" title="Previous chapter" aria-label="Previous chapter" aria-keyshortcuts="Left">
                         <i class="fa fa-angle-left"></i>
                     </a>
 
+                    <a rel="next prefetch" href="../../makepad/event/match_event.html" class="nav-chapters next" title="Next chapter" aria-label="Next chapter" aria-keyshortcuts="Right">
+                        <i class="fa fa-angle-right"></i>
+                    </a>
             </nav>
 
         </div>
